--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: causens
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Perform causal sensitivity analyses using various statistical methods
 Version: 0.0.1
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: person("Larry", "Dong", email = "larry.dong@mail.utoronto.ca", role = c("aut", "cre"))
+Description: This package provides functionality to perform causal sensitivity analyses using
+    recently developed statistical methods.
+License: MIT
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/Kuan-Liu-Lab/causens/
+RoxygenNote: 7.2.3
