--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Description: This package provides functionality to perform causal
 License: MIT
 URL: https://github.com/Kuan-Liu-Lab/causens/,
     https://kuan-liu-lab.github.io/causens/
-Suggests: 
+Suggests:
+    devtools,
     knitr,
     pkgdown,
     rmarkdown,
