--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,11 @@ Description: This package provides functionality to perform causal
 License: MIT
 URL: https://github.com/Kuan-Liu-Lab/causens/,
     https://kuan-liu-lab.github.io/causens/
+Collate:
+    "sensitivity_function.R"
+    "sf_corrected_outcomes.R"
+    "simData.R"
+    "causens.R"
 Suggests:
     devtools,
     knitr,
