--- a/.github/workflows/lint-project.yaml
+++ b/.github/workflows/lint-project.yaml
@@ -25,7 +25,13 @@ jobs:
         shell: Rscript {0}
 
       - name: Lint root directory
-        run: lintr::lint_dir()
+        run: |
+          lintr::lint_dir(linters = lintr::linters_with_defaults(
+            line_length_linter = lintr::line_length_linter(120),
+            commented_code_linter = NULL,
+            object_name_linter = NULL,
+            object_usage_linter = NULL
+          ))
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
