Edit import statements in files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,7 @@ export(gData_U_cont_Y_binary)
 export(gData_U_cont_Y_cont)
 export(sensitivity_function)
 export(simulate_data)
+importFrom(stats,plogis)
+importFrom(stats,predict)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
