--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,5 @@ export(gData_U_binary_Y_binary)
 export(gData_U_binary_Y_cont)
 export(gData_U_cont_Y_binary)
 export(gData_U_cont_Y_cont)
-export(sensitivity_function)
+export(sf)
 export(simulate_data)
