Updating linting workflow

--- a/.github/workflows/lint-project.yaml
+++ b/.github/workflows/lint-project.yaml
@@ -20,18 +20,17 @@ jobs:
         with:
           use-public-rspm: true
 
-      - name: Install lintr
-        run: install.packages("lintr")
+      - name: Install devtools + lintr
+        run: install.packages(c("devtools", "lintr"))
+        shell: Rscript {0}
+
+      - name: Install causens package
+        run: |
+          devtools::install()
         shell: Rscript {0}
 
       - name: Lint root directory
-        run: |
-          lintr::lint_dir(linters = lintr::linters_with_defaults(
-            line_length_linter = lintr::line_length_linter(120),
-            commented_code_linter = NULL,
-            object_name_linter = NULL,
-            object_usage_linter = NULL
-          ))
+        run: lintr::lint_dir(exclude_files = "simData.R")
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
