--- a/.github/workflows/lint-project.yaml
+++ b/.github/workflows/lint-project.yaml
@@ -11,14 +11,14 @@ name: lint-project
 jobs:
   lint-project:
     runs-on: ubuntu-latest
+    container:
+      image: rocker/r-ver:4.3.2
+
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
       - uses: actions/checkout@v3
-
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          use-public-rspm: true
 
       - name: Install lintr
         run: install.packages("lintr")
