--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -22,5 +22,6 @@ jobs:
         Rscript -e "install.packages('remotes')"
         Rscript -e "remotes::install_deps()"
         Rscript -e "install.packages(c('devtools', 'testthat'))"
+        Rscript -e "devtools::install('.')"  # Install local package
         Rscript -e "devtools::load_all()"
         Rscript -e "testthat::test_dir('tests')"
