Extending current work for linear c functions (#25)
* Extending current work for linear c functions

* Adapt tests to flexible sensitivity functions

* Correct corrected_outcomes test and sf function

* usethis modifications to testthat files

* Installing local package in run_tests workflow

* Garbage commit

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -18,11 +18,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install dependencies and run tests
-      env:
-        GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
       run: |
         Rscript -e "install.packages('remotes')"
         Rscript -e "remotes::install_deps()"
-        Rscript -e "install.packages('testthat')"
-        Rscript -e "remotes::install_local('.', dependencies = TRUE)"
+        Rscript -e "install.packages(c('devtools', 'testthat'))"
+        Rscript -e "devtools::install('.')"  # Install local package
+        Rscript -e "devtools::load_all()"
         Rscript -e "testthat::test_dir('tests')"
