--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -21,7 +21,7 @@ jobs:
       run: |
         Rscript -e "install.packages('remotes')"
         Rscript -e "remotes::install_deps()"
-        Rscript -e "install.packages(c('devtools', 'testthat'))"
+        Rscript -e "install.packages(c('devtools', 'PSweight', 'testthat'))"
         Rscript -e "devtools::install('.')"  # Install local package
         Rscript -e "devtools::load_all()"
         Rscript -e "testthat::test_dir('tests')"
