--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,3 +1,5 @@
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
     branches: [main, master]
@@ -24,12 +26,6 @@ jobs:
           extra-packages: any::covr
           needs: coverage
 
-      - name: Install additional dependencies
-        run: |
-          Rscript -e "install.packages('remotes')"
-          Rscript -e "remotes::install_deps(dependencies = TRUE)"
-          Rscript -e "install.packages('PSweight')"
-
       - name: Test coverage
         run: |
           covr::codecov(
@@ -42,16 +38,9 @@ jobs:
       - name: Show testthat output
         if: always()
         run: |
+          ## --------------------------------------------------------------------
           find ${{ runner.temp }}/package -name 'testthat.Rout*' -exec cat '{}' \; || true
         shell: bash
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: Kuan-Liu-Lab/causens
-        env:
-          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Upload test results
         if: failure()
