Updated docstrings to new API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,7 @@ export(gData_U_cont_Y_binary)
 export(gData_U_cont_Y_cont)
 export(sf)
 export(simulate_data)
+importFrom(stats,plogis)
+importFrom(stats,predict)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
