--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -17,11 +17,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Install JAGS
+      run: |
+        apt-get update
+        apt-get install -y jags
+
     - name: Install dependencies and run tests
       run: |
         Rscript -e "install.packages('remotes')"
         Rscript -e "remotes::install_deps()"
-        Rscript -e "install.packages(c('devtools', 'PSweight', 'testthat'))"
+        Rscript -e "install.packages(c('devtools', 'PSweight', 'rjags', 'testthat'))"
         Rscript -e "devtools::install('.')"  # Install local package
         Rscript -e "devtools::load_all()"
         Rscript -e "testthat::test_dir('tests')"
