--- a/.github/workflows/run_bayesian_tests.yaml
+++ b/.github/workflows/run_bayesian_tests.yaml
@@ -1,4 +1,4 @@
-name: Tests
+name: Bayesian Tests
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: rocker/r-ver:4.3.2
+      image: mavelli/rocker-bayesian
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -21,11 +21,7 @@ jobs:
       run: |
         Rscript -e "install.packages('remotes')"
         Rscript -e "remotes::install_deps()"
-        Rscript -e "install.packages(c('devtools', 'PSweight', 'testthat'))"
+        Rscript -e "install.packages(c('devtools', 'testthat'))"
         Rscript -e "devtools::install('.')"  # Install local package
         Rscript -e "devtools::load_all()"
-        Rscript -e "
-        test_files <- list.files(path = 'tests/testthat', pattern = '^test.*\\.R$', full.names = TRUE);
-        test_files <- test_files[!grepl('test_bayesian_sa.R$', test_files)];
-        for (test_file in test_files) { testthat::test_file(test_file) }
-        "
+        Rscript -e "testthat::test_file('tests/testthat/test_bayesian_sa.R')"
