--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -25,7 +25,7 @@ jobs:
         Rscript -e "devtools::install('.')"  # Install local package
         Rscript -e "devtools::load_all()"
         Rscript -e "
-        test_files <- list.files(path = 'tests/testthat', pattern = '^test.*\\.R$', full.names = TRUE);
+        test_files <- list.files(path = 'tests/testthat', pattern = '^test.*\.R$', full.names = TRUE);
         test_files <- test_files[!grepl('test_bayesian_sa.R$', test_files)];
         for (test_file in test_files) { testthat::test_file(test_file) }
         "
