--- a/.github/workflows/run_bayesian_tests.yaml
+++ b/.github/workflows/run_bayesian_tests.yaml
@@ -13,6 +13,7 @@ jobs:
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      SKIP_BAYESIAN_SA_TESTS: false
 
     steps:
     - uses: actions/checkout@v4
