--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(gData_U_binary_Y_binary)
 export(gData_U_binary_Y_cont)
 export(gData_U_cont_Y_binary)
 export(gData_U_cont_Y_cont)
+export(plot_causens)
 export(sf)
 export(simulate_data)
 importFrom(stats,plogis)
