--- a/.github/workflows/run_bayesian_tests.yaml
+++ b/.github/workflows/run_bayesian_tests.yaml
@@ -18,6 +18,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - uses: r-lib/actions/setup-r-dependencies@v2
+      with:
+        extra-packages: any::rcmdcheck
+        needs: check
+
+    - uses: r-lib/actions/check-r-package@v2
+      with:
+        upload-snapshots: true
+
     - name: Install dependencies and run tests
       run: |
         Rscript -e "install.packages('remotes')"
