--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: causens
 Title: Perform causal sensitivity analyses using various statistical methods
-Version: 0.0.1
+Version: 0.0.2-9000
 Authors@R: 
     c(person("Larry", "Dong", NULL, "larry.dong@mail.utoronto.ca", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7775-7798")),
     person("Yushu", "Zou", NULL, "yushu.zou@mail.utoronto.ca", role = c("aut"), comment = c(ORCID = "0009-0004-1133-4724")),
