Removing .lintr from main branch

--- a/.github/workflows/lint-project.yaml
+++ b/.github/workflows/lint-project.yaml
@@ -26,8 +26,9 @@ jobs:
 
       - name: Lint root directory
         run: |
-          devtools::load_all()  # load all functions from your package
-          lintr::lint_dir()
+          devtools::load_all()
+          library(lintr)
+          lint_dir(linters = linters_with_defaults(line_length_linter(120), commented_code_linter=NULL, object_name_linter=NULL))
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
