--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,3 +32,4 @@ Encoding: UTF-8
 RoxygenNote: 7.3.2
 BugReports: https://github.com/Kuan-Liu-Lab/causens/issues
 Config/testthat/edition: 3
+VignetteBuilder: knitr
