Housekeeping to address errors and warnings in workflows
Removing dev/ folder

Adding importFrom statements

Clarify license in DESCRIPTION

Fix linting

Fixing NAMESPACE

using Requirenamespace function

Shifted RJAGS-dependent code into if statement

Fix warnings via importFrom decorator

Remove require(rjags) altogether

Updating origin of update function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
     person("Kuan", "Liu", NULL, "kuan.liu@utoronto.ca", role = c("aut"), comment = c(ORCID = "0000-0002-5017-1276")))
 Description: This package provides functionality to perform causal
     sensitivity analyses using recently developed statistical methods.
-License: MIT
+License: MIT + file LICENSE
 URL: https://kuan-liu-lab.github.io/causens/, https://github.com/Kuan-Liu-Lab/causens
 Collate:
     "causens_bayesian.R"
