--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,17 @@ export(gData_U_cont_Y_cont)
 export(plot_causens)
 export(sf)
 export(simulate_data)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,plot)
+importFrom(stats,as.formula)
+importFrom(stats,binomial)
+importFrom(stats,formula)
+importFrom(stats,glm)
 importFrom(stats,plogis)
 importFrom(stats,predict)
+importFrom(stats,quantile)
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,terms)
