--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(simulate_data)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
+importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,formula)
 importFrom(stats,glm)
@@ -21,4 +22,5 @@ importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,terms)
