Adding vignette to package (#40)
* Changing warning error for installation

* Allow binary outcome in Bayesian SA via RJags (fixed test)

* Adding vignette template created via

* Populate vignette

* Remove Collate section in DESCRIPTION

* Populating vignette with MC SA

* Using eval = FALSE for Bayesian simulations in vignette

* Use informative_u = TRUE by default

* Revert default rjags installation to error message

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,14 +10,6 @@ Description: This package provides functionality to perform causal
     sensitivity analyses using recently developed statistical methods.
 License: MIT + file LICENSE
 URL: https://kuan-liu-lab.github.io/causens/, https://github.com/Kuan-Liu-Lab/causens
-Collate:
-    "causens_bayesian.R"
-    "causens_monte_carlo.R"
-    "causens_sf.R"
-    "causens.R"
-    "plot.R"
-    "sensitivity_function.R"
-    "simData.R"
 Suggests:
     devtools,
     knitr,
@@ -32,3 +24,4 @@ Encoding: UTF-8
 RoxygenNote: 7.3.2
 BugReports: https://github.com/Kuan-Liu-Lab/causens/issues
 Config/testthat/edition: 3
+VignetteBuilder: knitr
