Correct workflow input

--- a/.github/workflows/run_bayesian_tests.yaml
+++ b/.github/workflows/run_bayesian_tests.yaml
@@ -27,7 +27,7 @@ jobs:
       with:
         upload-snapshots: true
 
-    - uses: dorny/paths-filte@v3
+    - uses: dorny/paths-filter@v3
       id: changes
       with:
         filters: |
@@ -37,7 +37,7 @@ jobs:
             - "tests/testthat/test_bayesian_sa.R"
 
     - name: Install dependencies and run tests
-      if: steps.filter.outputs.src == "true"
+      if: ${{ steps.filter.outputs.src == 'true' }}
       run: |
         Rscript -e "install.packages('remotes')"
         Rscript -e "remotes::install_deps()"
