--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -26,7 +26,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      SKIP_BAYESIAN_SA_TESTS: true
+      SKIP_BAYESIAN_SA_TESTS: false
 
     steps:
       - uses: actions/checkout@v4
@@ -42,6 +42,25 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+
+      - name: Install JAGS on Ubuntu
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jags
+  
+      - name: Install JAGS on macOS
+        if: runner.os == 'macOS'
+        run: |
+          brew update
+          brew install jags
+
+      - name: Install JAGS on Windows
+        if: runner.os == 'Windows'
+        run: |
+          choco install jags -y
+          # Verify installation
+          jags --version || exit 1
 
       - uses: r-lib/actions/check-r-package@v2
         with:
