--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,4 +26,6 @@ importFrom(stats,quantile)
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(stats,terms)
+importFrom(stats,update)
