Using process_model_formula to make inputs as R formulae

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(gData_U_binary_Y_cont)
 export(gData_U_cont_Y_binary)
 export(gData_U_cont_Y_cont)
 export(plot_causens)
+export(process_model_formula)
 export(sf)
 export(simulate_data)
 importFrom(graphics,legend)
