Deprecate one-stop-shop causens API (#73)
* Allowing prior specification for alpha_uz and beta_uy

* Using process_model_formula to make inputs as R formulae

* Edit Monte Carlo approach code + fix lint

* Removal of causens.R

* Correct MC calls + vignette

* Updating summary functionality

* Fix lint

* Correcting vignette errors due to API change + data-gen doc

* Using stylr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(summary,bayesian_causens)
 S3method(summary,causens_sf)
 S3method(summary,monte_carlo_causens)
 export(bayesian_causens)
-export(causens)
 export(causens_monte_carlo)
 export(causens_sf)
 export(gData_U_binary_Y_binary)
@@ -12,6 +11,7 @@ export(gData_U_binary_Y_cont)
 export(gData_U_cont_Y_binary)
 export(gData_U_cont_Y_cont)
 export(plot_causens)
+export(process_model_formula)
 export(sf)
 export(simulate_data)
 importFrom(graphics,legend)
