Fixing errors after major version bump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,formula)
 importFrom(stats,glm)
+importFrom(stats,lm)
 importFrom(stats,plogis)
 importFrom(stats,predict)
 importFrom(stats,quantile)
