--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: causens
 Title: Perform causal sensitivity analyses using various statistical methods
-Version: 0.0.2-9000
+Version: 0.0.3
 Authors@R: 
     c(person("Larry", "Dong", NULL, "larry.dong@mail.utoronto.ca", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7775-7798")),
     person("Yushu", "Zou", NULL, "yushu.zou@mail.utoronto.ca", role = c("aut"), comment = c(ORCID = "0009-0004-1133-4724")),
@@ -19,7 +19,8 @@ Suggests:
     rmarkdown,
     roxygen2,
     testthat (>= 3.0.0),
-    usethis
+    usethis,
+    waldo
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 BugReports: https://github.com/Kuan-Liu-Lab/causens/issues
