--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: causens
-Title: Perform causal sensitivity analyses using various statistical methods
+Title: Perform Causal Sensitivity Analyses Using Various Statistical Methods
 Version: 0.0.3
 Authors@R: 
     c(person("Larry", "Dong", NULL, "larry.dong@mail.utoronto.ca", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7775-7798")),
