--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Title: Perform Causal Sensitivity Analyses Using Various Statistical Methods
 Version: 0.0.3
 Authors@R: 
     c(person("Larry", "Dong", NULL, "larry.dong@mail.utoronto.ca", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7775-7798")),
-    person("Yushu", "Zou", NULL, "yushu.zou@mail.utoronto.ca", role = c("aut"), comment = c(ORCID = "0009-0004-1133-4724")),
-    person("Kuan", "Liu", NULL, "kuan.liu@utoronto.ca", role = c("aut"), comment = c(ORCID = "0000-0002-5017-1276")))
+      person("Yushu", "Zou", NULL, "yushu.zou@mail.utoronto.ca", role = c("aut"), comment = c(ORCID = "0009-0004-1133-4724")),
+      person("Kuan", "Liu", NULL, "kuan.liu@utoronto.ca", role = c("aut"), comment = c(ORCID = "0000-0002-5017-1276")))
 Description: Functionality to perform causal sensitivity analyses using recently developed statistical methods.
-License: MIT
+License: MIT + file LICENSE
 URL: https://kuan-liu-lab.github.io/causens/, https://github.com/Kuan-Liu-Lab/causens
 Suggests:
     devtools,
