--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
     c(person("Larry", "Dong", NULL, "larry.dong@mail.utoronto.ca", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7775-7798")),
       person("Yushu", "Zou", NULL, "yushu.zou@mail.utoronto.ca", role = c("aut"), comment = c(ORCID = "0009-0004-1133-4724")),
       person("Kuan", "Liu", NULL, "kuan.liu@utoronto.ca", role = c("aut"), comment = c(ORCID = "0000-0002-5017-1276")))
-Description: Functionality to perform causal sensitivity analyses using recently developed statistical methods.
+Description: While data from randomized experiments remain the gold standard for causal inference, estimation of causal estimands from observational data is possible through various confounding adjustment methods. However, the challenge of unmeasured confounding remains a concern in causal inference, where failure to account for unmeasured confounders can lead to biased estimates of causal estimands. Sensitivity analysis within the framework of causal inference can help adjust for possible unmeasured confounding. In `causens`, three main methods are implemented: adjustment via sensitivity functions (Brumback, Hernán, Haneuse, and Robins (2004) <doi:10.1002/sim.1657> and Li, Shen, Wu, and Li (2011) <doi:10.1093/aje/kwr096>), Bayesian parametric modelling and Monte Carlo approaches (McCandless, Lawrence C and Gustafson, Paul (2017) <doi:10.1002/sim.7298>).
 License: MIT + file LICENSE
 URL: https://kuan-liu-lab.github.io/causens/, https://github.com/Kuan-Liu-Lab/causens
 Suggests:
